--- a/sites/jobs-and-offers.site/Dockerfile
+++ b/sites/jobs-and-offers.site/Dockerfile
@@ -2,11 +2,14 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+# Install curl for health checks
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-EXPOSE 5012
+EXPOSE 8000
 
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5012"]
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
