--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,8 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.10", "3.11"]
-        test-phase: [phase1, phase2]
+        python-version: ["3.11"]
+        test-phase: [phase1, phase2, phase3]
 
     steps:
       - name: Checkout code
